--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.application.name=notification-team
+spring.application.name=notification-microservice
 server.port=8181
 spring.cloud.consul.host=http://micro-ci.westus2.cloudapp.azure.com
 spring.cloud.consul.port=40601
 spring.cloud.consul.discovery.acl-token=ab8bdda5-2a4a-1ebf-0383-95ccbebe63b4
-spring.cloud.consul.discovery.tags=test
-spring.cloud.consul.discovery.health-check-url=http://localhost:${server.port}/health
+spring.cloud.consul.discovery.tags=notification-microservice
+spring.cloud.consul.discovery.health-check-path=/health
+#spring.cloud.consul.discovery.healthCheckUrl=https://service-discovery-esgi.herokuapp.com/health
 spring.cloud.consul.discovery.health-check-interval=5s
-#spring.cloud.consul.discovery.instance-id=${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
