--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.cloud.consul.host=http://micro-ci.westus2.cloudapp.azure.com
 spring.cloud.consul.port=40601
 spring.cloud.consul.discovery.acl-token=ab8bdda5-2a4a-1ebf-0383-95ccbebe63b4
 spring.cloud.consul.discovery.tags=notification-microservice
-spring.cloud.consul.discovery.health-check-path=/health
-#spring.cloud.consul.discovery.healthCheckUrl=https://service-discovery-esgi.herokuapp.com/health
-spring.cloud.consul.discovery.health-check-interval=1m
+#spring.cloud.consul.discovery.health-check-path=/health
+spring.cloud.consul.discovery.healthCheckUrl=https://service-discovery-esgi.herokuapp.com/health
+spring.cloud.consul.discovery.health-check-interval=10s
