--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=notification-microservice
+spring.application.name=notification-microservice-shutdown-test
 server.port=8181
 spring.cloud.consul.host=http://micro-ci.westus2.cloudapp.azure.com
 spring.cloud.consul.port=40601
@@ -7,3 +7,5 @@ spring.cloud.consul.discovery.tags=notification-microservice
 #spring.cloud.consul.discovery.health-check-path=/health
 spring.cloud.consul.discovery.healthCheckUrl=https://service-discovery-esgi.herokuapp.com/health
 spring.cloud.consul.discovery.health-check-interval=10s
+management.endpoints.web.exposure.include=*
+management.endpoint.shutdown.enabled=true
