--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=notification-microservice
 server.port=8181
 spring.cloud.consul.host=http://micro-ci.westus2.cloudapp.azure.com
 spring.cloud.consul.port=40601
-spring.cloud.consul.discovery.acl-token=System.getenv("token")
+spring.cloud.consul.discovery.acl-token=System.getenv('token')
 spring.cloud.consul.discovery.tags=notification-microservice
 #spring.cloud.consul.discovery.health-check-path=/health
 spring.cloud.consul.discovery.healthCheckUrl=https://service-discovery-esgi.herokuapp.com/health
